# wands

./: .gitignore  Architecuture.md  LICENCE  README.md  datamanread_Adiosfile.py  datamansend_adiosfile.py  exampleCSD3.py  exampleUKAEA.py  example_client.ipynb  example_server.ipynb  example_usage.ipynb  generate_adiosfile.py  pyproject.toml
adiostests/: send.py  sendSSt.py  sstreceive.py  sstsend.py
examples/: exampleApplication.py  exampleCSD3.ipynb  exampleCSD3.py  exampleRestClient.py  exampleUKAEA.ipynb  exampleUKAEA.py  exampleWandsAPI.py
python/: access_api.py  dataman-receiver.py  dataman-server.py
randomscripts/: access_api.py  datamanread_Adiosfile.py  datamansend_adiosfile.py  generateOutput.cpp  generate_adiosfile.py  readAdiosfile.py  zmq_send.py
randomscripts/takenOutOfSourceScripts/: dataman-receiver.py  dataman-server.py
server/: CMakeLists.txt  main.cpp  readme.txt  test.py  test_client.cpp
server/server_group/: main.cpp
src/wands/: __init__.py  access_api.py  adios.py  data_cache.py  logger.py  wan.py  wands.py
src/wands/datahub/: __init__.py  hdf_util.py  random_util.py
tests/: test_access_api.py  test_adios.py  test_data_cache.py  test_datahub_random.py  test_wan.py  test_wands.py
